Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21582

Crash in clang's tooltip handling

XMLWordPrintable

      All I did was moving the mouse around! I swear!

      Trace:

      Thread 1 (Thread 0x7f4ee1fedbc0 (LWP 15113)):
      #0  0x00007f4ee58c724a in __waitpid (pid=15922, stat_loc=0x0, options=0) at ../sysdeps/unix/sysv/linux/waitpid.c:30
              resultvar = 18446744073709551104
              sc_cancel_oldtype = 0
              sc_ret = <optimized out>
      #1  0x000055cc22f09e1e in signalHandler (signal=11) at /home/shaneh/dev/qt-creator/src/tools/qtcreatorcrashhandler/crashhandlersetup.cpp:86
              pid = 15922
      
      #2  <signal handler called>
      No locals.
      #3  std::__atomic_base<int>::load (__m=std::memory_order_relaxed, this=0x1c) at /usr/include/c++/8/bits/atomic_base.h:396
      
              __b = std::memory_order_relaxed
              __b = <optimized out>
      #4  QAtomicOps<int>::load<int> (_q_value=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qatomic_cxx11.h:227
      
      No locals.
      #5  0x00007f4ecf931b5c in QBasicAtomicInteger<int>::load (this=0x1c) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qbasicatomic.h:103
      
      No locals.
      #6  0x00007f4ecf983a19 in QWeakPointer<QObject>::data (this=0x55cc2d9a8880) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qsharedpointer_impl.h:569
      
      No locals.
      #7  0x00007f4ecf97f8ca in QPointer<TextEditor::TextEditorWidget>::data (this=0x55cc2d9a8880) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qpointer.h:86
      No locals.
      #8  0x00007f4ecf9789e6 in QPointer<TextEditor::TextEditorWidget>::operator TextEditor::TextEditorWidget* (this=0x55cc2d9a8880) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qpointer.h:92
      
      No locals.
      #9  0x00007f4ecf9763e4 in TextEditor::Internal::HoverHandlerRunner::onHandlerFinished (this=0x55cc2d9a8880, documentRevision=0, position=24, priority=0) at /home/shaneh/dev/qt-creator/src/plugins/texteditor/texteditor.cpp:355
      
              currentHandler = 0x55cc250b9ea0
      
      #10 0x00007f4ecf9762d5 in TextEditor::Internal::HoverHandlerRunner::checkNext()::{lambda(int)#1}::operator()(int) const (__closure=0x55cc250b9ea0, priority=0) at /home/shaneh/dev/qt-creator/src/plugins/texteditor/texteditor.cpp:349
      
              this = 0x55cc2d9a8880
      
      #11 0x00007f4ecf97f96c in std::_Function_handler<void (int), TextEditor::Internal::HoverHandlerRunner::checkNext()::{lambda(int)#1}>::_M_invoke(std::_Any_data const&, int&&) (__functor=..., __args#0=@0x7ffc23fbd4b4: 0) at /usr/include/c++/8/bits/std_function.h:297
      
      No locals.
      #12 0x00007f4ecd846cc4 in std::function<void (int)>::operator()(int) const (this=0x55cc250b9ea0, __args#0=0) at /usr/include/c++/8/bits/std_function.h:687
      
      No locals.
      #13 0x00007f4ecd846569 in ClangCodeModel::Internal::ClangHoverHandler::processToolTipInfo (this=0x55cc250b9e60, info=...) at /home/shaneh/dev/qt-creator/src/plugins/clangcodemodel/clanghoverhandler.cpp:198
              __PRETTY_FUNCTION__ = "void ClangCodeModel::Internal::ClangHoverHandler::processToolTipInfo(const CppTools::ToolTipInfo&)"
              text = {d = 0x55cc2dd8d690}
      
      #14 0x00007f4ecd845b77 in ClangCodeModel::Internal::ClangHoverHandler::<lambda()>::operator()(void) const (__closure=0x55cc2d4a9ce0) at /home/shaneh/dev/qt-creator/src/plugins/clangcodemodel/clanghoverhandler.cpp:135
              this = 0x55cc250b9e60
      
      #15 0x00007f4ecd846acb in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, ClangCodeModel::Internal::ClangHoverHandler::identifyMatch(TextEditor::TextEditorWidget*, int, TextEditor::BaseHoverHandler::ReportPriority)::<lambda()> >::call(ClangCodeModel::Internal::ClangHoverHandler::<lambda()> &, void **) (f=..., arg=0x7ffc23fbd800) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:128
      
      No locals.
      #16 0x00007f4ecd846aac in QtPrivate::Functor<ClangCodeModel::Internal::ClangHoverHandler::identifyMatch(TextEditor::TextEditorWidget*, int, TextEditor::BaseHoverHandler::ReportPriority)::<lambda()>, 0>::call<QtPrivate::List<>, void>(ClangCodeModel::Internal::ClangHoverHandler::<lambda()> &, void *, void **) (f=..., arg=0x7ffc23fbd800) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:238
      
      No locals.
      #17 0x00007f4ecd846a7a in QtPrivate::QFunctorSlotObject<ClangCodeModel::Internal::ClangHoverHandler::identifyMatch(TextEditor::TextEditorWidget*, int, TextEditor::BaseHoverHandler::ReportPriority)::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=1, this_=0x55cc2d4a9cd0, r=0x7f4e94001fd0, a=0x7ffc23fbd800, ret=0x0) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:421
      
      No locals.
      #18 0x00007f4ee5bfe3e0 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
      
      No symbol table info available.
      #19 0x00007f4ee5a2ade5 in QFutureWatcherBase::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
      
      No symbol table info available.
      #20 0x00007f4ee66fc491 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kosjar Nikolai Kosjar
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes