Clang: Abort hover handlers on ~TextEditorWidget

We have a QPointer<QTextEditorWidget> in HoverHandlerRunner and a check
in onHandlerFinished() to handle the editor-closed-case. However, the
HoverHandlerRunner and thus the QPointer<> do not outlive the
TextEditorWidget.

Abort the handlers in ~HoverHandlerRunner instead.

Task-number: QTCREATORBUG-21582
Change-Id: I03b78802ca75ddd4be9fea994e3dd9b152060e72
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: David Schulz <david.schulz@qt.io>